--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,26 @@
 [package]
 name = "agi"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+include = [
+    "srs/**/*",
+    "Cargo.toml",
+    "README.md",
+    "LICENSE"
+]
+
+homepage = "https://github.com/JiranKurian/agi"
+description = "A complete package for Artificial General Intelligence"
+repository = "https://github.com/JiranKurian/agi"
+keywords = [
+    "cli"
+    "agi"
+    "ai"
+    "ml"
+    "Artificial Intelligence"
+]
+categories = ["library"]
+LICENSE = "Apache 2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
